--- a/agents/generate/check-structure-planning-result.yaml
+++ b/agents/generate/check-structure-planning-result.yaml
@@ -1,5 +1,5 @@
-name: checkStructurePlanningResult
-description: 对 structure-planning agent 生成的结果进行检查，确保其符合预期，特别是在有上一轮生成结果和用户反馈的场景下。
+name: checkDocumentStructure
+description: Check the Document Structure to ensure it meets expectations, especially in scenarios with previous generation results and user feedback.
 instructions:
   url: ../../prompts/structure/check-structure-planning-result.md
 input_schema:
@@ -7,13 +7,13 @@ input_schema:
   properties:
     structurePlan:
       $ref: ../schema/structure-plan.yaml
-      description: 新一轮生成的结构规划。
+      description: Newly generated document structure.
     originalStructurePlan:
       $ref: ../schema/structure-plan.yaml
-      description: 上一轮生成的结构规划，用于对比。如果不存在，则检查默认通过。
+      description: Previous generation's document structure for comparison. If it doesn't exist, the check passes by default.
     feedback:
       type: string
-      description: 用户针对上一轮结果提供的反馈。
+      description: User feedback provided for the previous generation's results.
   required:
     - structurePlan
 output_schema:
@@ -21,10 +21,10 @@ output_schema:
   properties:
     isValid:
       type: boolean
-      description: 检查是否通过。true 表示通过，false 表示不通过。
+      description: Whether the check passes. true indicates pass, false indicates failure.
     structureReviewFeedback:
       type: string
-      description: 检查结果的详细说明。如果不通过，需要明确指出哪里不符合要求。
+      description: Detailed explanation of the check results. If it fails, clearly specify which parts do not meet requirements.
   required:
     - isValid
     - structureReviewFeedback
