--- a/agents/schema/structure-plan-result.yaml
+++ b/agents/schema/structure-plan-result.yaml
@@ -8,7 +8,7 @@ items:
       type: string
     path:
       type: string
-      description: 路径，以 RUL 的格式返回，不能为空, 必须以 / 开头，不需要包含语言层级，比如 /zh/about 直接返回 /about
+      description: Path in URL format, cannot be empty, must start with /, no need to include language level, e.g., /zh/about should return /about
     parentId:
       type:
         - string
@@ -20,12 +20,12 @@ items:
         properties:
           language:
             type: string
-            description: 语言代码，比如 zh, en, ja 等
+            description: Language code, such as zh, en, ja, etc.
     sourceIds:
       type: array
       items:
         type: string
-      description: 关联的 dataSources 中的 sourceId，用于后续的翻译和内容生成，必须来自 datasources 中的 sourceId，不能有虚假的 id, 不能为空
+      description: Associated sourceId from dataSources for subsequent translation and content generation, must come from sourceId in datasources, cannot have fake ids, cannot be empty
   required:
     - title
     - description
