--- a/agents/schema/structure-plan.yaml
+++ b/agents/schema/structure-plan.yaml
@@ -8,15 +8,15 @@ items:
       type: string
     path:
       type: string
-      description: 路径，以 RUL 的格式返回，不能为空, 不能包含空格等特殊字符, 必须以 / 开头，不需要包含语言层级，比如 /zh/about 直接返回 /about
+      description: Path in URL format, cannot be empty, cannot contain spaces or special characters, must start with /, no need to include language level, e.g., /zh/about should return /about
     parentId:
       type:
         - string
         - "null"
-      description: 父节点 path，如果为 null 则表示是顶级节点
+      description: Parent node path, if null indicates it is a top-level node
     sourceIds:
       type: array
-      description: 关联的 dataSources 中的 sourceId，用于后续的翻译和内容生成，必须来自 datasources 中的 sourceId，不能有虚假的 id, **不能为空**
+      description: Associated sourceId from dataSources for subsequent translation and content generation, must come from sourceId in datasources, cannot have fake ids, **cannot be empty**
       items:
         type: string
   required:
