--- a/agents/generate/index.yaml
+++ b/agents/generate/index.yaml
@@ -5,7 +5,7 @@ alias:
   - g
 description: Generate complete documentation for your project
 skills:
-  - url: ../init/init.mjs
+  - url: ../init/index.mjs
     default_input:
       skipIfExists: true
   - ../utils/load-sources.mjs
