--- a/agents/translate/index.yaml
+++ b/agents/translate/index.yaml
@@ -2,7 +2,7 @@ type: team
 name: translate
 description: Translate documents into other languages
 skills:
-  - url: ../init/init.mjs
+  - url: ../init/index.mjs
     default_input:
       skipIfExists: true
   - ../utils/load-sources.mjs
