--- a/aigne.yaml
+++ b/aigne.yaml
@@ -21,14 +21,14 @@ agents:
   - ./agents/update/content-detail-generator.yaml
   - ./agents/generate/structure-planner.yaml
   - ./agents/generate/check-structure-planning-result.yaml
-  - ./agents/init/init.mjs
-  - ./agents/generate/generate.yaml
+  - ./agents/init/index.mjs
+  - ./agents/generate/index.yaml
   - ./agents/update/update.yaml
   - ./agents/publish/publish-docs.mjs
   - ./agents/utils/format-structure-plan.mjs
-  - ./agents/publish/publish.yaml
+  - ./agents/publish/index.yaml
   - ./agents/utils/find-item-by-path.mjs
-  - ./agents/translate/translate.yaml
+  - ./agents/translate/index.yaml
   - ./agents/translate/language-selector.mjs
   - ./docs-mcp/get-docs-structure.mjs
   - ./docs-mcp/get-docs-detail.mjs
@@ -38,17 +38,17 @@ agents:
   - ./docs-mcp/analyze-content-relevance.yaml
   - ./agents/utils/check-feedback-refiner.mjs
   - ./agents/utils/feedback-refiner.yaml
-  - ./agents/prefs/prefs.mjs
-  - ./agents/chat/chat.yaml
+  - ./agents/prefs/index.mjs
+  - ./agents/chat/index.yaml
 cli:
-  chat: ./agents/chat/chat.yaml
+  chat: ./agents/chat/index.yaml
   agents:
-    - ./agents/init/init.mjs
-    - ./agents/generate/generate.yaml
+    - ./agents/init/index.mjs
+    - ./agents/generate/index.yaml
     - ./agents/update/update.yaml
-    - ./agents/publish/publish.yaml
-    - ./agents/translate/translate.yaml
-    - ./agents/prefs/prefs.mjs
+    - ./agents/publish/index.yaml
+    - ./agents/translate/index.yaml
+    - ./agents/prefs/index.mjs
 mcp_server:
   agents:
     - ./docs-mcp/get-docs-structure.mjs
