--- a/agents/generate/structure-planner.yaml
+++ b/agents/generate/structure-planner.yaml
@@ -2,7 +2,7 @@ type: team
 name: structurePlanner
 description: A team of agents that plan the structure of the documentation.
 skills:
-  - structure-plan-generator.yaml
+  - structure-generator.yaml
 task_title: Plan the structure of the documentation
 task_render_mode: collapse
 reflection:
