fix: polish agent name

--- a/agents/generate/index.yaml
+++ b/agents/generate/index.yaml
@@ -9,7 +9,7 @@ skills:
     default_input:
       skipIfExists: true
   - ../utils/load-sources.mjs
-  - ./check-structure-plan.mjs
+  - ./check-need-generate-structure.mjs
   - url: ../utils/save-output.mjs
     default_input:
       saveKey: structurePlan
