--- a/agents/generate/refine-document-structure.yaml
+++ b/agents/generate/refine-document-structure.yaml
@@ -1,8 +1,8 @@
 type: team
-name: structurePlanner
+name: refineDocumentStructure
 description: A team of agents that plan the structure of the documentation.
 skills:
-  - structure-generator.yaml
+  - generate-structure.yaml
 task_title: Plan the structure of the documentation
 task_render_mode: collapse
 reflection:
