fix: polish agent name

--- a/agents/translate/index.yaml
+++ b/agents/translate/index.yaml
@@ -23,7 +23,7 @@ skills:
           })
         }
       ])
-  - url: ../utils/selected-docs.mjs
+  - url: ../utils/choose-docs.mjs
     default_input:
       isTranslate: true
   - ../translate/choose-language.mjs
