--- a/agents/update/update.yaml
+++ b/agents/update/update.yaml
@@ -14,8 +14,8 @@ skills:
       $merge([
         $,
         {
-          'structurePlan': originalStructurePlan,
-          'structurePlanResult': $map(originalStructurePlan, function($item) {
+          'documentStructure': originalDocumentStructure,
+          'documentStructureResult': $map(originalDocumentStructure, function($item) {
             $merge([
               $item,
               {
