fix: polish code

--- a/agents/generate/index.yaml
+++ b/agents/generate/index.yaml
@@ -23,7 +23,7 @@ skills:
       $merge([
         $,
         {
-          'documentStructureResult': $map(documentStructure, function($item) {
+          'documentExecutionStructure': $map(documentStructure, function($item) {
             $merge([
               $item,
               {
