--- a/agents/update/batch-generate-document.yaml
+++ b/agents/update/batch-generate-document.yaml
@@ -9,11 +9,11 @@ input_schema:
     datasources:
       type: string
       description: Context for structure planning, used to assist generate document structure
-    documentStructureResult: ../schema/document-execution-structure.yaml
+    documentExecutionStructure: ../schema/document-execution-structure.yaml
     modifiedFiles:
       type: array
       items: { type: string }
       description: Array of modified files since last generation
-iterate_on: documentStructureResult
+iterate_on: documentExecutionStructure
 concurrency: 3
 mode: sequential
