--- a/agents/update/update.yaml
+++ b/agents/update/update.yaml
@@ -15,7 +15,7 @@ skills:
         $,
         {
           'documentStructure': originalDocumentStructure,
-          'documentStructureResult': $map(originalDocumentStructure, function($item) {
+          'documentExecutionStructure': $map(originalDocumentStructure, function($item) {
             $merge([
               $item,
               {
