fix: polish code

--- a/agents/generate/generate-structure.yaml
+++ b/agents/generate/generate-structure.yaml
@@ -1,5 +1,5 @@
 name: generateStructure
-description: Plan the structure and organization of your documentation
+description: Generate the structure and organization of your documentation
 instructions:
   url: ../../prompts/structure/generate-structure.md
 input_schema:
@@ -13,7 +13,7 @@ input_schema:
       description: Primary language for documentation (e.g., zh, en, ja)
     datasources:
       type: string
-      description: Project content and context to help plan structure
+      description: Project content and context to help generate document structure
     targetAudience:
       type: string
       description: Target audience for the documentation
