--- a/agents/translate/translate-multilingual.yaml
+++ b/agents/translate/translate-multilingual.yaml
@@ -1,5 +1,5 @@
 type: team
-name: batchTranslateDocument
+name: translateMultilingual
 description: Batch translate documents to multiple languages
 skills:
   - type: team
