chore: update license

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "bin": "aigne.yaml",
   "keywords": [],
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
-  "license": "MIT",
+  "license": "Elastic-2.0",
   "dependencies": {
     "@aigne/aigne-hub": "^0.9.3",
     "@aigne/anthropic": "^0.13.3",
