fix: support publish beta tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,4 +45,9 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         run: |
           npm config set '//registry.npmjs.org/:_authToken' "${{ secrets.NPM_TOKEN }}"
-          pnpm publish --access public --no-git-checks
+          if [[ "${{ steps.release.outputs.version }}" == *beta* ]]; then
+            pnpm publish --access public --no-git-checks --tag beta
+          else
+            pnpm publish --access public --no-git-checks
+          fi
+
