chore(main): release 0.8.10-beta

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aigne/doc-smith",
-  "version": "0.8.9",
+  "version": "0.8.10-beta",
   "description": "",
   "publishConfig": {
     "access": "public"
