--- a/agents/update/generate-and-translate-document.yaml
+++ b/agents/update/generate-and-translate-document.yaml
@@ -24,6 +24,37 @@ skills:
       return_last_on_max_iterations: true
     task_title: Generate document for '{{ title }}'
   - type: transform
+    jsonata: |
+      $merge([
+        $,
+        { "diagramContent": reviewContent }
+      ])
+  - type: team
+    task_render_mode: collapse
+    name: generateD2DiagramContent
+    skills:
+      - ../generate/generate-d2-diagram.yaml
+    reflection:
+      reviewer: ../generate/check-d2-diagram.mjs
+      is_approved: isValid
+      max_iterations: 5
+      return_last_on_max_iterations: true
+    # input_schema:
+    #   type: object
+    #   properties:
+    #     diagramContent:
+    #       type: string
+    #       description: Text description diagram content to generate D2 diagram
+    #   required:
+    #     - diagramContent
+    # output_schema:
+    #   type: object
+    #   properties:
+    #     d2DiagramSourceCode:
+    #       type: string
+    #       description: Source code to draw D2 diagram
+  - ../generate/merge-d2-diagram.yaml
+  - type: transform
     task_render_mode: hide
     jsonata: |
       $merge([
