--- a/agents/certify/evaluation-document-structure.yaml
+++ b/agents/certify/evaluation-document-structure.yaml
@@ -5,6 +5,7 @@ instructions:
 model: openai/gpt-5
 # model: anthropic/claude-opus-4-0
 task_render_mode: collapse
+task_title: Evaluate the structure of the documentation
 input_schema:
   type: object
   properties:
