--- a/agents/certify/evaluation-document.yaml
+++ b/agents/certify/evaluation-document.yaml
@@ -5,6 +5,7 @@ instructions:
 model: openai/gpt-5
 # model: anthropic/claude-opus-4-0
 task_render_mode: collapse
+task_title: Evaluate document for '{{ title }}'
 input_schema:
   type: object
   properties:
@@ -63,20 +64,6 @@ output_schema:
       required:
         - score
         - reason
-    contentQuality:
-      type: object
-      properties:
-        score:
-          type: integer
-          minimum: 1
-          maximum: 5
-          description: Content quality score, 1-5 points
-        reason:
-          type: string
-          description: Concise and specific scoring reason
-      required:
-        - score
-        - reason
     translationQuality:
       type: object
       properties:
@@ -85,6 +72,20 @@ output_schema:
           minimum: 1
           maximum: 5
           description: Translation quality score, 1-5 points (if applicable)
+        reason:
+          type: string
+          description: Concise and specific scoring reason
+      required:
+        - score
+        - reason
+    contentQuality:
+      type: object
+      properties:
+        score:
+          type: integer
+          minimum: 1
+          maximum: 5
+          description: Content quality score, 1-5 points
         reason:
           type: string
           description: Concise and specific scoring reason
@@ -147,6 +148,20 @@ output_schema:
       required:
         - score
         - reason
+    navigability:
+      type: object
+      properties:
+        score:
+          type: integer
+          minimum: 1
+          maximum: 5
+          description: Navigability score, 1-5 points
+        reason:
+          type: string
+          description: Concise and specific scoring reason, including specific error links if any
+      required:
+        - score
+        - reason
   required:
     - readability
     - coherence
@@ -156,4 +171,5 @@ output_schema:
     - purposeAlignment
     - audienceAlignment
     - knowledgeLevelAlignment
+    - navigability
 includeInputInOutput: true
