--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@aigne/gemini": "^0.13.4",
     "@aigne/openai": "^0.15.4",
     "@aigne/publish-docs": "^0.11.0",
+    "@blocklet/payment-broker-client": "^1.20.17",
     "@terrastruct/d2": "^0.1.33",
     "chalk": "^5.5.0",
     "debug": "^4.4.1",
