--- a/agents/evaluate/evaluation-document.yaml
+++ b/agents/evaluate/evaluation-document.yaml
@@ -54,7 +54,7 @@ output_schema:
                 description: Dimension associated with this observation
               level:
                 type: string
-                enum: [Excellent, Good, Normal, Bad, Terrible]
+                enum: [excellent, good, meets, minor, critical]
                 description: Evaluation level applied to the observation
               topic:
                 type: string
@@ -65,16 +65,12 @@ output_schema:
               description:
                 type: string
                 description: Impact-focused explanation of the observation
-              delta:
-                type: integer
-                description: Point delta contributed by the observation
             required:
               - dimension
               - level
               - topic
               - line
               - description
-              - delta
       required:
         - baseline
         - details
