feat: tune document and structure update with tools (#137)
* fix: use psychologically enhanced ai agents

* fix: use tool call update document structure

* fix: polish structure prompts

* fix: polish code

* fix: polish code

* fix: add document update use tool

* fix: check and fix diff info

* fix: polish document update agent

* fix: polish code

* test: add code test

* test: add code test

* test: add code test

* test: polish code test

* test: add code test

* fix: polish code

* test: polish code test

* fix: polish code test

* fix: polish code

* fix: polish prompts

* fix: add reconnect option and clear stored access token

* fix: enhance error handling for documentation publishing with reconnect instructions

* fix: polish code

* test: add code test

* fix: update generate structure prompts with system and user roles

* fix: polish prompt

* chore: update:deps

* fix: polish document structure prompt

* fix: polish prompts

* fix: polish prompt

* fix: polish prompt

* chore: update document structure tools to use Zod for input validation and add new dependencies

* refactor: integrate Zod schema validation for input in updateDocumentContent function

* test: polish code test

* fix: polish code

* feat: add clear command

* fix: polish code

* fix: polish code

* test: add code test

* test: polish code test

* fix: polish code

* test: polish code test

* chore: update:deps

* fix: polish code

--- a/agents/update/index.yaml
+++ b/agents/update/index.yaml
@@ -25,17 +25,11 @@ skills:
           })
         }
       ])
-  - ../utils/choose-docs.mjs
-  - ../utils/format-document-structure.mjs
-  - type: team
-    name: batchUpdateDocument
-    skills:
-      - ../update/generate-and-translate-document.yaml
-    iterate_on: selectedDocs
-    concurrency: 3
-  - url: ../utils/check-feedback-refiner.mjs
+  - url: ../utils/choose-docs.mjs
     default_input:
-      stage: document_refine
+      requiredFeedback: false
+  - ../utils/format-document-structure.mjs
+  - ../update/check-update-is-single.mjs
   - url: ../utils/action-success.mjs
     default_input:
       action: "✅ Documents updated successfully"
