--- a/aigne.yaml
+++ b/aigne.yaml
@@ -6,42 +6,79 @@ chat_model:
   # name: gemini-2.5-flash
   temperature: 0.8
 agents:
+  # Initialization
+  - ./agents/init/index.mjs
+
+  # Document Structure Generation
   - ./agents/generate/generate-structure.yaml
-  - ./agents/update/batch-generate-document.yaml
-  - ./agents/utils/load-sources.mjs
-  - ./agents/utils/save-docs.mjs
-  - ./agents/translate/translate-document.yaml
-  - ./agents/update/generate-and-translate-document.yaml
-  - ./agents/update/check-document.mjs
-  - ./agents/utils/transform-detail-datasources.mjs
-  - ./agents/translate/translate-multilingual.yaml
-  - ./agents/utils/save-single-doc.mjs
-  - ./agents/utils/save-output.mjs
+  - ./agents/generate/update-document-structure.yaml
   - ./agents/generate/check-need-generate-structure.mjs
-  - ./agents/update/generate-document.yaml
   - ./agents/generate/refine-document-structure.yaml
   - ./agents/generate/check-document-structure.yaml
-  - ./agents/init/index.mjs
+  - ./agents/generate/user-review-document-structure.mjs
   - ./agents/generate/index.yaml
+  
+  # Document Structure Tools
+  - ./agents/generate/document-structure-tools/add-document.mjs
+  - ./agents/generate/document-structure-tools/delete-document.mjs
+  - ./agents/generate/document-structure-tools/update-document.mjs
+  - ./agents/generate/document-structure-tools/move-document.mjs
+
+  # Document Content Generation & Updates
+  - ./agents/update/batch-generate-document.yaml
+  - ./agents/update/generate-document.yaml
+  - ./agents/update/generate-and-translate-document.yaml
+  - ./agents/update/check-document.mjs
+  - ./agents/update/update-document-detail.yaml
+  - ./agents/update/user-review-document.mjs
+  - ./agents/update/batch-update-document.yaml
+  - ./agents/update/update-single-document.yaml
+  - ./agents/update/check-update-is-single.mjs
   - ./agents/update/index.yaml
-  - ./agents/publish/publish-docs.mjs
-  - ./agents/utils/format-document-structure.mjs
-  - ./agents/publish/index.yaml
-  - ./agents/utils/find-item-by-path.mjs
-  - ./agents/translate/index.yaml
+
+
+  # Translation
+  - ./agents/translate/translate-document.yaml
+  - ./agents/translate/translate-multilingual.yaml
   - ./agents/translate/choose-language.mjs
+  - ./agents/translate/index.yaml
+
+  # Publishing
+  - ./agents/publish/publish-docs.mjs
+  - ./agents/publish/index.yaml
+
+  # Clear/Cleanup
+  - ./agents/clear/choose-contents.mjs
+  - ./agents/clear/clear-document-structure.mjs
+  - ./agents/clear/clear-generated-docs.mjs
+  - ./agents/clear/clear-document-config.mjs
+  - ./agents/clear/clear-auth-tokens.mjs
+
+  # Utilities
+  - ./agents/utils/load-sources.mjs
+  - ./agents/utils/save-docs.mjs
+  - ./agents/utils/transform-detail-datasources.mjs
+  - ./agents/utils/save-single-doc.mjs
+  - ./agents/utils/save-output.mjs
+  - ./agents/utils/format-document-structure.mjs
+  - ./agents/utils/find-item-by-path.mjs
+  - ./agents/utils/check-feedback-refiner.mjs
+  - ./agents/utils/feedback-refiner.yaml
+
+  # User Preferences & Chat
+  - ./agents/prefs/index.mjs
+  - ./agents/chat/index.yaml
+
+  # Documentation MCP Server
   - ./docs-mcp/get-docs-structure.mjs
   - ./docs-mcp/get-docs-detail.mjs
   - ./docs-mcp/docs-search.yaml
   - ./docs-mcp/analyze-docs-relevance.yaml
   - ./docs-mcp/read-doc-content.mjs
   - ./docs-mcp/analyze-content-relevance.yaml
-  - ./agents/utils/check-feedback-refiner.mjs
-  - ./agents/utils/feedback-refiner.yaml
-  - ./agents/prefs/index.mjs
-  - ./agents/chat/index.yaml
+
+  # Evaluation
   - ./agents/evaluate/index.yaml
-  - ./agents/generate/user-review-document-structure.mjs
 cli:
   chat: ./agents/chat/index.yaml
   agents:
@@ -50,6 +87,7 @@ cli:
     - ./agents/update/index.yaml
     - ./agents/publish/index.yaml
     - ./agents/translate/index.yaml
+    - ./agents/clear/index.yaml
     - ./agents/prefs/index.mjs
 mcp_server:
   agents:
