--- a/package.json
+++ b/package.json
@@ -22,20 +22,24 @@
   "author": "Arcblock <blocklet@arcblock.io> https://github.com/blocklet",
   "license": "Elastic-2.0",
   "dependencies": {
-    "@aigne/aigne-hub": "^0.9.5",
-    "@aigne/anthropic": "^0.13.4",
-    "@aigne/cli": "^1.48.1",
-    "@aigne/core": "^1.60.3",
-    "@aigne/gemini": "^0.13.4",
-    "@aigne/openai": "^0.15.4",
+    "@aigne/aigne-hub": "^0.10.0",
+    "@aigne/anthropic": "^0.14.0",
+    "@aigne/cli": "^1.49.0",
+    "@aigne/core": "^1.61.0",
+    "@aigne/gemini": "^0.14.0",
+    "@aigne/openai": "^0.16.0",
     "@aigne/publish-docs": "^0.11.0",
     "@terrastruct/d2": "^0.1.33",
     "chalk": "^5.5.0",
+    "cli-highlight": "^2.1.11",
     "debug": "^4.4.1",
+    "diff": "^8.0.2",
     "dompurify": "^3.2.6",
     "fs-extra": "^11.3.1",
     "glob": "^11.0.3",
     "jsdom": "^26.1.0",
+    "marked": "^16.3.0",
+    "marked-terminal": "^7.3.0",
     "mermaid": "^11.9.0",
     "open": "^10.2.0",
     "p-map": "^7.0.3",
@@ -48,7 +52,9 @@
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.3",
-    "yaml": "^2.8.0"
+    "yaml": "^2.8.0",
+    "zod": "^3.25.76",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.4"
