--- a/agents/clear/index.yaml
+++ b/agents/clear/index.yaml
@@ -7,6 +7,7 @@ skills:
   - url: ../init/index.mjs
     default_input:
       skipIfExists: true
+      checkOnly: true
   - ./choose-contents.mjs
 input_schema:
   type: object
