--- a/agents/translate/index.yaml
+++ b/agents/translate/index.yaml
@@ -5,6 +5,7 @@ skills:
   - url: ../init/index.mjs
     default_input:
       skipIfExists: true
+      checkOnly: true
   - ../utils/load-sources.mjs
   - type: transform
     task_render_mode: hide
