fix: fix detail sources bug

--- a/agents/update/update-single-document.yaml
+++ b/agents/update/update-single-document.yaml
@@ -1,6 +1,7 @@
 type: team
 name: updateSingleDocument
 skills:
+  - ../utils/transform-detail-datasources.mjs
   - ../update/user-review-document.mjs
   - type: transform
     task_render_mode: hide
