--- a/agents/generate/update-document-structure.yaml
+++ b/agents/generate/update-document-structure.yaml
@@ -2,7 +2,10 @@ type: ai
 name: updateDocumentStructure
 description: Update document structure based on user feedback and intentions using structure modification tools
 instructions:
-  url: ../../prompts/structure/update-document-structure.md
+  - role: system
+    url: ../../prompts/structure/update-document-structure-system.md
+  - role: user
+    url: ../../prompts/structure/update-document-structure-user.md
 input_schema:
   type: object
   properties:
